@startuml
'https://plantuml.com/class-diagram

class GPSChallenge {
    - jugadores : Queue<Jugador>
    - jugadorActual : Jugador
    - ranking : Ranking
    + GPSChallenge(alto : int, ancho: int)
    + agregarJugador(Jugador)
    + mover(Direccion)
    + hayJugadoresPorJugar() : bool
    + escogerSiguienteJugador()
    + obtenerTop10() : string[]
    + obtenerMejorJugador() : string
    + jugadorActual() : Jugador
}

class Escenario {
    - alto : int
    - ancho : int
    - chocables : Chocable[][]
    - {static} instance : Escenario
    - Escenario(limiteAlto, limiteAncho)
    + generarObstaculos()
    + {static} getInstance() : Escenario
    + {static} getInstance(alto, ancho) : Escenario
    + contienePosicion(posicion) : Bool
    + insertarChocable(chocable, posicion)
    + obtenerChocable(posicion) : Chocable
    + reset() : Escenario
}

class Jugador {
    - nombre : string
    - posicionAnterior : Posicion
    + Jugador(vehiculo, nombre)
    + mover(direccion)
    - chocarObstaculos()
    + recibirPenalizacion(penalizacion: int)
    + recibirPorcentaje(porcentaje: int)
    + cambiarVehiculo(nuevoVehiculo : Vehiculo)
    + retrocederPosicionAnterior()
    + dejarDeJugar()
    + puedeSeguirJugando()
}

GPSChallenge "1" --> "*" Jugador
GPSChallenge --> Escenario
Jugador .> Escenario

@enduml